# fedle

./: MANIFEST  README.md  github.js  package-lock.json  package.json  setup.py
boiler_plate/: test.py
contracts/: README.md
contracts/src/: Reward.sol  Token.sol
fedle/: client.py  pyproject.toml  run.js  server.py  utils.py
fedle.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: App.jsx  index.css
src/constant/: axios.js  contractAbi.json
src/style/: App.css
