[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "HFLand"
version = "0.1.0"
description = "A decentralised platform to train your deep learning models"
authors = [
    "The Flower Authors <hello@flower.dev>",
    "VasuK111"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
flwr = ">=1.0,<2.0"
torch = "1.13.1"
torchvision = "0.14.1"
validators = "0.18.2"
